--- a/cloud.yml
+++ b/cloud.yml
@@ -1,3 +1,8 @@
+#1
 type: "vapor"
-swift_version: "4.1.0"
+#2
+swift_version: "4.1.0-beta"
+#3
+docker_template: "vapor-4.1.0-beta"
+#4
 run_parameters: "serve --port 8080 --hostname 0.0.0.0"
